# cgt

./: .gitignore  README.md  commitlint.config.js  config.py  log.md  main.py  package-lock.json  package.json  pyproject.toml
experiment-log/2025/11/: 1.md  7.md
experiment-log/2025/12/: 1.md
scripts/: calculate_prob.py  play_game.py  simulate_three_rows_chomp.py  simulation.py  three_rows_chomp_prob_sim.py  visualize.py
slide/: main.tex
src/: agent.py  chomp.py  recurrence_relation.py  three_rows_chomp_prob.py  three_times_n_prob.py  utilities.py
src/fraction/: calculate_unnormalize_fraction.py
src/game/: agent.py
src/prob/: three_rows_chomp_prob.py  two_rows_chomp_prob.py
src/prob/fraction/: calculate_unnormalize_fraction.py  unnormalize_fraction.py
src/prob/simulation/: visualize_three_rows_prob.py
tests/: test_recurrence_relation.py  test_simulation.py  test_three_times_n_prob.py
