[project]
name = "cgt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pytest>=8.0.0",
    "ruff>=0.14.1",
    "seaborn>=0.13.2",
]

[project.scripts]
play_game = "scripts.play_game:play_game"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]
